samples/_failures_safe/1761373062_c5aae0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fa79b30.c: In function ‘main’:
./samples/SAFE/__tmp_2fa79b30.c:174:13: error: expected declaration or statement at end of input
  174 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_2fa79b30.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2fa79b30.c:174:13: error: expected declaration or statement at end of input
